--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,33 +1,76 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
+﻿@using BO.Reps;
+@using BO;
+<!DOCTYPE html>
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head runat="server">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>@ViewBag.Title</title>
-    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/modernizr-2.5.3.js")" type="text/javascript"></script>
+    <!--CSS files-->
+    <link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet"/>
+    <link href="@Url.Content("~/Content/bootstrap-responsive.css")" rel="stylesheet"/>
+    <link href="@Url.Content("~/Content/docs.css")" rel="stylesheet"/>
+    <link href="@Url.Content("~/Content/mycss.css")" rel="stylesheet"/>
+    <link href="@Url.Content("~/Scripts/google-code-prettify/prettify.css")" rel="stylesheet"/>  
+    <!--Scripts files-->
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-2.0.3.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/bootstrap.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-ui-1.10.3.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/bootstrap-carousel.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/news-script.js")"></script>
+
+    
 </head>
-<body>
-    <div class="page">
-        <header>
-            <div id="title">
-                <h1>Mi aplicación de MVC</h1>
-            </div>
-            <div id="logindisplay">
-                @Html.Partial("_LogOnPartial")
-            </div>
-            <nav>
-                <ul id="menu">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
+<body id="body">
+    <div>
+        <div class="navbar navbar-inverse">
+            <div class="navbar-inner navbar-fixed-top">
+            <div class="container">
+
+            <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                </a>
+
+                <!-- Be sure to leave the brand out there if you want it shown -->
+                <a class="brand" href="/Home/Index">Toy al Dia</a>
+
+                <!-- Everything you want hidden at 940px or less, place within here -->
+                <div class="nav-collapse collapse">
+                <ul class="nav">
+                                  
                 </ul>
-            </nav>
-        </header>
-        <section id="main">
+                </div>
+                
+            </div>
+            </div>
+            <div class="divider-orange"></div>
+        </div>
+
+    </div>                                
+    <div class="container box-shadow content" id="container">
             @RenderBody()
-        </section>
-        <footer>
-        </footer>
     </div>
+    <div class="footer-div">
+        <footer>
+            <div class="navbar navbar-inverse navbar-fixed-bottom child-footer">            
+                <div class="divider-orange"></div>
+                <div class="navbar-inner">
+                    <div class="container">
+                        <!--©-->
+                        <div class="nav-collapse collapse">
+                            <ul class="nav">                        
+                                <li class="offset2"><a href="@Url.Action("Index")" ><label class="text-center">©Toyaldia.net.do</label></a></li>                                            
+                            </ul>
+                        </div>                    
+                    </div>            
+                </div>        
+            </div>
+        </footer> 
+    </div>
+        
 </body>
 </html>
