--- a/Views/Usuario/Create.cshtml
+++ b/Views/Usuario/Create.cshtml
@@ -4,62 +4,63 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
+<div class="span6">
 @using (Html.BeginForm()) {
+    <h2>Crear Usuario</h2>
     @Html.ValidationSummary(true)
     <fieldset>
-        <legend>Usuario</legend>
+        <legend class="divider-orange"></legend>
+        <div class="span3">
+            <div class="editor-label">
+                <label>Nombre Usuario</label>
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.UserName)
+                @Html.ValidationMessageFor(model => model.UserName)
+            </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.UserName)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.UserName)
-            @Html.ValidationMessageFor(model => model.UserName)
-        </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Password)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Password)
+                @Html.ValidationMessageFor(model => model.Password)
+            </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Password)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Password)
-            @Html.ValidationMessageFor(model => model.Password)
-        </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Email)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Email)
+                @Html.ValidationMessageFor(model => model.Email)
+            </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Email)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Email)
-            @Html.ValidationMessageFor(model => model.Email)
-        </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Tipo)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Tipo)
+                @Html.ValidationMessageFor(model => model.Tipo)
+            </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Activo)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Activo)
-            @Html.ValidationMessageFor(model => model.Activo)
-        </div>
+            <div>
+                 <div >
+                    <label>Activo</label>
+                    @Html.EditorFor(model => model.Activo)
+                    @Html.ValidationMessageFor(model => model.Activo)
+                </div>
+            </div>
+            <p>
+                <br />
+                <input class="btn btn-inverse" type="submit" value="Create" />
+            </p>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Tipo)
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Tipo)
-            @Html.ValidationMessageFor(model => model.Tipo)
-        </div>
-
-        <p>
-            <input type="submit" value="Create" />
-        </p>
+        
     </fieldset>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
