Adding multiple changest

--- a/Views/Usuario/Delete.cshtml
+++ b/Views/Usuario/Delete.cshtml
@@ -34,6 +34,11 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.Tipo)
     </div>
+
+    <div class="display-label">Role</div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Role.Nombre)
+    </div>
 </fieldset>
 @using (Html.BeginForm()) {
     <p>
