--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,15 +12,30 @@
     <link href="@Url.Content("~/Content/docs.css")" rel="stylesheet"/>
     <link href="@Url.Content("~/Content/mycss.css")" rel="stylesheet"/>
     <link href="@Url.Content("~/Scripts/google-code-prettify/prettify.css")" rel="stylesheet"/>  
+    <link href="../../Content/bootstrap-responsive.min.css" rel="stylesheet" />
+    <link href="../../Content/bootstrap.min.css" rel="stylesheet" />
+
     <!--Scripts files-->
-    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-2.0.3.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/bootstrap.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-ui-1.10.3.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-ui-1.8.20.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/bootstrap-carousel.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Scripts/news-script.js")"></script>
+    <script src="../../Scripts/bootstrap-affix.js"></script>
+    <script src="../../Scripts/bootstrap-alert.js"></script>
+    <script src="../../Scripts/bootstrap-button.js"></script>
+    <script src="../../Scripts/bootstrap-carousel.js"></script>
+    <script src="../../Scripts/bootstrap-collapse.js"></script>
+    <script src="../../Scripts/bootstrap-dropdown.js"></script>
+    <script src="../../Scripts/bootstrap-modal.js"></script>
+    <script src="../../Scripts/bootstrap-popover.js"></script>
+    <script src="../../Scripts/bootstrap-scrollspy.js"></script>
+    <script src="../../Scripts/bootstrap-tab.js"></script>
+    <script src="../../Scripts/bootstrap-tooltip.js"></script>
+    <script src="../../Scripts/bootstrap-transition.js"></script>
+    <script src="../../Scripts/bootstrap-typeahead.js"></script>
+    <!--Scripts files-->
 
-    
 </head>
 <body id="body">
     <div>
