--- a/Views/Usuario/Create.cshtml
+++ b/Views/Usuario/Create.cshtml
@@ -4,19 +4,19 @@
     ViewBag.Title = "Create";
 }
 
-
-
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+
 <div class="span6">
 @using (Html.BeginForm()) {
     <h2>Crear Usuario</h2>
-    @Html.ValidationSummary(true)
+     @Html.ValidationSummary(true)
     <fieldset>
         <legend class="divider-orange"></legend>
         <div class="span3">
+            
             <div class="editor-label">
-                <label>Nombre Usuario</label>
+                @Html.LabelFor(model => model.UserName)
             </div>
             <div class="editor-field">
                 @Html.EditorFor(model => model.UserName)
@@ -40,27 +40,27 @@
             </div>
 
             <div class="editor-label">
-                @Html.LabelFor(model => model.Tipo)
+                @Html.LabelFor(model => model.RoleId, "Role")
             </div>
             <div class="editor-field">
-                @Html.EditorFor(model => model.Tipo)
-                @Html.ValidationMessageFor(model => model.Tipo)
+                @Html.DropDownList("RoleId", String.Empty)
+                @Html.ValidationMessageFor(model => model.RoleId)
             </div>
 
-            <div>
-                 <div >
-                    <label>Activo</label>
-                    @Html.EditorFor(model => model.Activo)
-                    @Html.ValidationMessageFor(model => model.Activo)
-                </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Activo)
             </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Activo)
+                @Html.ValidationMessageFor(model => model.Activo)
+            </div>
+
             <p>
                 <br />
-                <input class="btn btn-inverse" type="submit" value="Create" />
+                <input class="btn btn-inverse" type="submit" value="Crear" />
             </p>
-
         </div>
-        
-    </fieldset>
+    </fieldset>  
+    
 }
 </div>
