--- a/Views/Usuario/Edit.cshtml
+++ b/Views/Usuario/Edit.cshtml
@@ -56,6 +56,14 @@
             @Html.ValidationMessageFor(model => model.Tipo)
         </div>
 
+        <div class="editor-label">
+            @Html.LabelFor(model => model.RoleId, "Role")
+        </div>
+        <div class="editor-field">
+            @Html.DropDownList("RoleId", String.Empty)
+            @Html.ValidationMessageFor(model => model.RoleId)
+        </div>
+
         <p>
             <input type="submit" value="Save" />
         </p>
